fleet-gitops/35-backup/backup-manifests/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: backup
  namespace: backup
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: "2160h"
    cert-manager.io/renew-before: "360h"
spec:
  gatewayClassName: ${GATEWAY_CLASS}
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: "${BACKUP_FQDN}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: "${BACKUP_TLS_SECRET}"
      allowedRoutes:
        namespaces:
          from: Same
